--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@stablelib/base64": "^1.0.0",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
+    "eslint": "^7.0.0",
     "expo": "~37.0.3",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -29,8 +30,9 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.6",
     "babel-preset-expo": "~8.1.0",
-    "@babel/core": "^7.8.6"
+    "eslint-plugin-react-hooks": "^4.0.2"
   },
   "private": true
 }
