--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-screens": "~2.2.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
-    "realm": "^5.0.4"
+    "realm": "^5.0.4",
+    "expo-secure-store": "~8.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
