--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@react-navigation/stack": "^5.2.14",
     "@stablelib/base64": "^1.0.0",
     "axios": "^0.19.2",
+    "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.0.0",
     "expo": "~37.0.3",
+    "expo-secure-store": "~8.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
@@ -27,7 +29,7 @@
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "realm": "^5.0.4",
-    "expo-secure-store": "~8.1.0"
+    "save": "^2.4.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
