added logout functionality

--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@react-navigation/stack": "^5.2.14",
     "@stablelib/base64": "^1.0.0",
     "axios": "^0.19.2",
-    "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.0.0",
     "expo": "~37.0.3",
+    "expo-crypto": "~8.1.0",
     "expo-secure-store": "~8.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
