--- a/package.json
+++ b/package.json
@@ -17,22 +17,25 @@
     "dotenv": "^8.2.0",
     "eslint": "^7.0.0",
     "expo": "~37.0.3",
+    "expo-barcode-scanner": "~8.1.0",
     "expo-crypto": "~8.1.0",
+    "expo-location": "~8.1.0",
+    "expo-permissions": "~8.1.0",
     "expo-secure-store": "~8.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-custom-qr-codes-expo": "^2.2.0",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-qrcode-svg": "^6.0.6",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
+    "react-native-svg": "11.0.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "realm": "^5.0.4",
-    "save": "^2.4.0",
-    "expo-permissions": "~8.1.0",
-    "expo-location": "~8.1.0",
-    "expo-barcode-scanner": "~8.1.0"
+    "save": "^2.4.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
