--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^5.2.14",
     "@stablelib/base64": "^1.0.0",
     "axios": "^0.19.2",
+    "chance": "^1.1.6",
     "dotenv": "^8.2.0",
     "eslint": "^7.0.0",
     "expo": "~37.0.3",
@@ -23,7 +24,9 @@
     "expo-location": "~8.1.0",
     "expo-permissions": "~8.1.0",
     "expo-print": "~8.1.0",
+    "expo-random": "~8.1.0",
     "expo-secure-store": "~8.1.0",
+    "js-nacl": "^1.3.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
