--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.6",
+    "@react-native-community/picker": "^1.6.1",
     "@react-navigation/bottom-tabs": "^5.5.1",
     "@react-navigation/drawer": "^5.5.1",
     "@react-navigation/native": "^5.1.7",
@@ -31,8 +32,11 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-custom-qr-codes-expo": "^2.2.0",
+    "react-native-dropdown-picker": "^3.0.4",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-maps": "0.26.1",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-qrcode-svg": "^6.0.6",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
@@ -40,8 +44,7 @@
     "react-native-svg": "11.0.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
-    "save": "^2.4.0",
-    "react-native-maps": "0.26.1"
+    "save": "^2.4.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
