--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "0.1.6",
+    "@react-native-community/masked-view": "^0.1.6",
     "@react-native-community/picker": "^1.6.1",
     "@react-navigation/bottom-tabs": "^5.5.1",
     "@react-navigation/drawer": "^5.5.1",
@@ -28,9 +28,11 @@
     "expo-random": "~8.1.0",
     "expo-secure-store": "~8.1.0",
     "js-nacl": "^1.3.2",
+    "lottie-react-native": "~2.6.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-animated-loader": "0.0.8",
     "react-native-custom-qr-codes-expo": "^2.2.0",
     "react-native-dropdown-picker": "^3.0.4",
     "react-native-fs": "^2.16.6",
