--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.4.2",
     "@react-native-community/masked-view": "^0.1.6",
     "@react-native-community/picker": "^1.6.1",
     "@react-navigation/bottom-tabs": "^5.5.1",
@@ -35,6 +36,7 @@
     "react-native-animated-loader": "0.0.8",
     "react-native-custom-qr-codes-expo": "^2.2.0",
     "react-native-dropdown-picker": "^3.0.4",
+    "react-native-elements": "^2.0.3",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-maps": "0.26.1",
@@ -43,6 +45,7 @@
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
+    "react-native-slider": "^0.11.0",
     "react-native-svg": "11.0.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
