--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "expo": "~37.0.3",
     "expo-barcode-scanner": "~8.1.0",
     "expo-crypto": "~8.1.0",
+    "expo-file-system": "~8.1.0",
     "expo-location": "~8.1.0",
     "expo-permissions": "~8.1.0",
     "expo-print": "~8.1.0",
     "expo-random": "~8.1.0",
     "expo-secure-store": "~8.1.0",
+    "expo-sharing": "~8.1.0",
     "js-nacl": "^1.3.2",
     "lottie-react-native": "~2.6.1",
     "react": "~16.9.0",
@@ -39,17 +41,22 @@
     "react-native-elements": "^2.0.3",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-image-to-pdf": "^1.2.0",
     "react-native-maps": "0.26.1",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-qrcode-svg": "^6.0.6",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
+    "react-native-share": "^3.7.0",
     "react-native-slider": "^0.11.0",
     "react-native-svg": "11.0.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
-    "save": "^2.4.0"
+    "save": "^2.4.0",
+    "expo-gl-cpp": "~8.1.0",
+    "expo-gl": "~8.1.0",
+    "expo-camera": "~8.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
