--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "eslint": "^7.0.0",
     "expo": "~37.0.3",
     "expo-barcode-scanner": "~8.1.0",
+    "expo-camera": "~8.2.0",
     "expo-crypto": "~8.1.0",
     "expo-file-system": "~8.1.0",
+    "expo-gl": "~8.1.0",
+    "expo-gl-cpp": "~8.1.0",
     "expo-location": "~8.1.0",
     "expo-permissions": "~8.1.0",
     "expo-print": "~8.1.0",
@@ -36,6 +39,7 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-animated-loader": "0.0.8",
+    "react-native-canvas": "^0.1.37",
     "react-native-custom-qr-codes-expo": "^2.2.0",
     "react-native-dropdown-picker": "^3.0.4",
     "react-native-elements": "^2.0.3",
@@ -53,10 +57,7 @@
     "react-native-svg": "11.0.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
-    "save": "^2.4.0",
-    "expo-gl-cpp": "~8.1.0",
-    "expo-gl": "~8.1.0",
-    "expo-camera": "~8.2.0"
+    "save": "^2.4.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
