--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "react-native-svg": "11.0.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
-    "save": "^2.4.0"
+    "save": "^2.4.0",
+    "react-native-webview": "8.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
