--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.0",
     "@react-native-community/checkbox": "^0.4.2",
     "@react-native-community/masked-view": "^0.1.6",
     "@react-native-community/picker": "^1.6.1",
@@ -16,6 +17,8 @@
     "@react-navigation/native": "^5.1.7",
     "@react-navigation/stack": "^5.2.14",
     "@stablelib/base64": "^1.0.0",
+    "@tensorflow/tfjs": "^2.4.0",
+    "@tensorflow/tfjs-react-native": "^0.3.0",
     "axios": "^0.19.2",
     "chance": "^1.1.6",
     "dotenv": "^8.2.0",
@@ -57,8 +60,8 @@
     "react-native-svg": "11.0.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
-    "save": "^2.4.0",
-    "react-native-webview": "8.1.1"
+    "react-native-webview": "8.1.1",
+    "save": "^2.4.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
